add metapath query command
