# src/main/resources/webroot/openapi.yaml
@@ -149,6 +149,31 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /query:
+    get:
+      operationId: query
+      summary: Query OSCAL document
+      parameters:
+        - in: query
+          name: document
+          required: true
+          schema:
+            type: string
+            format: uri
+          description: URI of the remote OSCAL document to convert
+        - in: query
+          name: metapath
+          required: false
+          schema:
+            type: string
+          description: metapath to query oscal document
+      responses:
+        '200':
+          $ref: '#/components/responses/OscalResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
 
 components:
   schemas:
